@@ -406,16 +406,27 @@ var CloudCommander, Util, DOM = {}, CloudFunc;
      * @pCurrentFile
      */
     DOM.promptNewFolder         = function(){
+        DOM.promptNewFile('directory', '?dir');
+    };
+    
+    /**
+     * create new file
+     *
+     * @pCurrentFile
+     */
+    DOM.promptNewFile         = function(pTypeName, pType){
         var lName   = DOM.getCurrentName(),
-            lDir    = DOM.getCurrentDirPath();
+            lDir    = DOM.getCurrentDirPath(),
+            lMsg    = 'New ' + pTypeName || 'File',
+            lType   = Util.isString(pType) ? pType : '';
         
         if(lName === '..')
             lName = '';
         
-        lName       = prompt("New directory", lName);
+        lName       = prompt(lMsg, lName);
         
         if(lName)
-            DOM.RESTfull.save(lDir + lName + '?dir', null, CloudCommander.refresh);
+            DOM.RESTfull.save(lDir + lName + lType, null, CloudCommander.refresh);
     };
     
     /**
@@ -1007,7 +1018,7 @@ var CloudCommander, Util, DOM = {}, CloudFunc;
             /* если это папка - возвращаем слово dir вместо размера*/
         
         DOM.RESTfull.read(lLink, function(pSize){
-            DOM.setCurrentSize(pSize);
+            DOM.setCurrentSize(pSize, pCurrentFile);
             Util.exec(pCallBack);
         }, '?size');
         
@@ -1156,12 +1167,12 @@ var CloudCommander, Util, DOM = {}, CloudFunc;
      * select current file
      * @param pCurrent
      */
-    DOM.selectFile              = function(pCurrent){
+    DOM.setSelectedFile              = function(pCurrent){
         var lCurrent    = pCurrent || DOM.getCurrentFile(),
             lRet        = DOM.addClass(pCurrent, SELECTED_FILE);
         
         if(!lRet)
-            DOM.unSelectFile(lCurrent);
+            DOM.unsetSelectedFile(lCurrent);
         
         return lRet;
     };
@@ -1170,7 +1181,7 @@ var CloudCommander, Util, DOM = {}, CloudFunc;
      * unselect current file
      * @param pCurrent
      */
-    DOM.unSelectFile              = function(pCurrent){
+    DOM.unsetSelectedFile              = function(pCurrent){
         var lCurrent    = pCurrent || DOM.getCurrentFile(),
             lRet        = DOM.removeClass(lCurrent, SELECTED_FILE);
         
@@ -1310,13 +1321,11 @@ var CloudCommander, Util, DOM = {}, CloudFunc;
      * @param pCurrentFile
      */
     DOM.setCurrentName          = function(pName, pCurrentFile){
-        var lCurrent = pCurrentFile || DOM.getCurrentFile(),
-            lLink    = DOM.getCurrentLink( lCurrent );
+        var lLink   = DOM.getCurrentLink( pCurrentFile ),
+            lDir    = DOM.getCurrentDirName() + '/';
         
-        if(lLink)
-           lLink.href = lLink.title = lLink.textContent = pName;
-          
-        lLink.href = CloudFunc.FS + DOM.getCurrentDirPath() + lLink.href;
+        lLink.title = lLink.textContent = pName;
+        lLink.href  = lDir + pName;
         
         return lLink;
     };
