@@ -22,6 +22,8 @@ var CloudCommander, Util, DOM;
         INSERT      : 45,
         DELETE      : 46,
         
+        A           : 65,
+        
         D           : 68,
         
         G           : 71,
@@ -66,7 +68,7 @@ var CloudCommander, Util, DOM;
         
         var key_event   = function(pEvent){
                 /* получаем выдленный файл*/
-                var lCurrentFile = DOM.getCurrentFile(), i;
+                var i, n, lCurrentFile = DOM.getCurrentFile();
                 /* если клавиши можно обрабатывать*/
                 if(keyBinded && pEvent){
                     var lKeyCode    = pEvent.keyCode,
@@ -90,7 +92,7 @@ var CloudCommander, Util, DOM;
                     }
                     
                     else if(lKeyCode >= KEY.F1 && lKeyCode <= KEY.TRA ||
-                        lKeyCode >= KEY.TAB && lKeyCode <= KEY.DELETE)
+                        lKeyCode >= KEY.TAB && lKeyCode <= KEY.A)
                         
                         switch(lKeyCode){
                             case KEY.TAB:
@@ -115,7 +117,7 @@ var CloudCommander, Util, DOM;
                                 break;
                             
                             case KEY.INSERT:
-                                DOM.selectFile(lCurrentFile);
+                                DOM.setSelectedFile(lCurrentFile);
                                 DOM.setCurrentFile( lCurrentFile.nextSibling );
                                 break;
                             
@@ -189,15 +191,15 @@ var CloudCommander, Util, DOM;
                                 var lSelected   = DOM.isSelected(lCurrentFile),
                                     lDir        = DOM.isCurrentIsDir(lCurrentFile);
                                 
-                                
-                                if(lDir)
-                                    Util.ifExec(lSelected, function(){
-                                        DOM.selectFile(lCurrentFile);
-                                    }, function(pCallBack){
-                                        DOM.loadCurrentSize(pCallBack, lCurrentFile);
-                                    });
-                                else
-                                    DOM.selectFile(lCurrentFile);
+                                if(!lDir)
+                                    lSelected = true;
+                                    
+                                Util.ifExec(lSelected, function(){
+                                    DOM.setSelectedFile(lCurrentFile);
+                                }, function(pCallBack){
+                                    DOM.loadCurrentSize(pCallBack, lCurrentFile);
+                                });
+
                                 
                                 DOM.preventDefault(pEvent);
                                 break;
@@ -207,7 +209,7 @@ var CloudCommander, Util, DOM;
                              * выделяем предыдущую строку   */
                             case KEY.UP:
                                 if(lShift)
-                                     DOM.selectFile(lCurrentFile);
+                                     DOM.setSelectedFile(lCurrentFile);
                                 
                                 DOM.setCurrentFile( lCurrentFile.previousSibling );
                                 DOM.preventDefault( pEvent );
@@ -217,7 +219,7 @@ var CloudCommander, Util, DOM;
                              * выделяем следующую строку    */
                             case KEY.DOWN:
                                 if(lShift)
-                                     DOM.selectFile(lCurrentFile);
+                                     DOM.setSelectedFile(lCurrentFile);
                                 
                                 DOM.setCurrentFile( lCurrentFile.nextSibling );
                                 DOM.preventDefault( pEvent );
@@ -279,6 +281,21 @@ var CloudCommander, Util, DOM;
                             case KEY.ENTER:
                                 if( DOM.isCurrentIsDir() )
                                     Util.exec( CloudCmd.loadDir() );
+                                break;
+                            
+                            case KEY.A:
+                                if(pEvent.ctrlKey){
+                                    var lParent = lCurrentFile.parentElement,
+                                        lNodes = lParent.childNodes;
+                                    
+                                    /* not path and fm_header */
+                                    for(i = 2, n = lNodes.length; i < n; i++)
+                                        DOM.setSelectedFile( lNodes[i] );
+                                    
+                                    DOM.preventDefault(pEvent);
+                                }
+                                
+                                break;
                         }
                     
                     /* если нажали <ctr>+r
