@@ -167,11 +167,8 @@ var CloudCommander, Util, DOM, CloudFunc, $;
         lMenuItems.Download = Util.retExec(downloadFromMenu);
         
         lMenuItems.New = {
-            'File' : function(){
-                Util.log('New->File');
-            },
-            
-            'Dir' : DOM.promptNewFolder,
+            'File'          : DOM.promptNewFile,
+            'Dir'           : DOM.promptNewFolder,
             
             'From cloud...' : function(){
                 CloudCmd.execFromModule('FilePicker', 'saveFile', function(pName, pData){
